[gd_scene load_steps=5 format=3 uid="uid://fmvfp7wvc7ge"]

[ext_resource type="Script" path="res://menu.gd" id="1_sdvyb"]
[ext_resource type="Texture2D" uid="uid://boy612u5eyw86" path="res://textures/menulogo.png" id="2_gypm3"]
[ext_resource type="Texture2D" uid="uid://k20nipod4f7x" path="res://textures/block.png" id="3_f6d7k"]

[sub_resource type="CanvasTexture" id="CanvasTexture_vaesw"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sdvyb")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(638.75, 359.75)
scale = Vector2(1278.5, 720.5)
texture = SubResource("CanvasTexture_vaesw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(640, 194)
scale = Vector2(4, 4)
texture = ExtResource("2_gypm3")

[node name="Button" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 0
offset_left = 576.0
offset_top = 403.0
offset_right = 617.0
offset_bottom = 434.0
scale = Vector2(2.34046, 2.34046)
text = "Play"
flat = true

[node name="Button2" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 0
offset_left = 524.0
offset_top = 517.0
offset_right = 616.0
offset_bottom = 548.0
scale = Vector2(2.34046, 2.34046)
text = "Quit Game"
flat = true

[node name="box" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-42, -36)
scale = Vector2(2, 2)
texture = ExtResource("3_f6d7k")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
